--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,19 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  /* Define your custom gradient here */
+  .purple-gradient {
+    background: linear-gradient(
+      to right,
+      rgb(199, 210, 254),
+      rgb(254, 202, 202),
+      rgb(254, 249, 195)
+    );
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* Apply the background gradient using the class */
+  @apply purple-gradient; /* Use the @apply directive to apply the class */
+  padding: 20px; /* Adjust margins as needed */
 }
